# ahmadtest

./: Cargo.toml  LexActivator.h  README.md  build.rs  libLexActivator.dylib
.github/workflows/: main.yml  rust-publish.yml  rust.yml
src/: error_code.rs  extern_functions.rs  lib.rs  oldLib.rs  string_utils.rs
