# [build]

[package]
name = "ahmadtest"
version = "0.1.25"
edition = "2021"
description = "just to test rust crates"
license = "MIT"
links = "LexActivator"
build = "build.rs"

# [lib]
# path = "src/lexactivator.rs"
# crate-type = ["cdylib"]



[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [build-dependencies]
# reqwest = { version = "0.11", features = ["blocking", "json"] }




