# [build]

[package]
name = "ahmadtest"
version = "1.2.11"
edition = "2021"
description = "just to test rust crates"
license = "MIT"
links = "LexActivator"
build = "build.rs"
documentation = "https://docs.rs/ahmadtest/1.2.10/ahmadtest/"
repository = "https://github.com/ahmad-kemsan/ahmadtest"
# [lib]
# path = "src/lexactivator.rs"
# crate-type = ["cdylib"]



[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [build-dependencies]
# reqwest = { version = "0.11", features = ["blocking", "json"] }




