# [build]

[package]
name = "ahmadtest"
version = "1.2.13"
edition = "2021"
description = "just to test rust crates"
license = "MIT"
links = "LexActivator"
build = "build.rs"
documentation = "https://docs.rs/ahmadtest/latest/ahmadtest/"
repository = "https://github.com/ahmad-kemsan/ahmadtest"
# [lib]
# path = "src/lexactivator.rs"
# crate-type = ["cdylib"]



[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [build-dependencies]
# reqwest = { version = "0.11", features = ["blocking", "json"] }




